[gd_scene load_steps=2 format=3 uid="uid://bah3xdscalw7a"]

[ext_resource type="Script" path="res://interface/menus/pause/system/system.gd" id="1_2m8wv"]

[node name="System" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_2m8wv")
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.0
offset_top = -48.0
offset_right = 82.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReturnToGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SettingsGridContainer/MusicSlider")
focus_next = NodePath("../SettingsGridContainer/MusicSlider")
focus_previous = NodePath("../QuitButton")
text = "Continue Game"
alignment = 0

[node name="SettingsGridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "Music"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../ReturnToGameButton")
focus_neighbor_bottom = NodePath("../SFXSlider")
focus_next = NodePath("../SFXSlider")
focus_previous = NodePath("../../ReturnToGameButton")
max_value = 1.0
step = 0.05

[node name="SFXLabel" type="Label" parent="VBoxContainer/SettingsGridContainer"]
layout_mode = 2
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../MusicSlider")
focus_previous = NodePath("../MusicSlider")
max_value = 1.0
step = 0.05
value = 1.0

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
text = "Return to menu"
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MainMenuButton")
focus_neighbor_bottom = NodePath("../ReturnToGameButton")
focus_next = NodePath("../ReturnToGameButton")
focus_previous = NodePath("../MainMenuButton")
text = "Quit Game"
alignment = 0

[connection signal="pressed" from="VBoxContainer/ReturnToGameButton" to="." method="_on_return_to_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
